--- a/portfolio.html
+++ b/portfolio.html
@@ -37,13 +37,19 @@
         </nav>
         <ul class="list mailtel">
           <li class="mailtel-item">
-            <a href="mailto:info@devstudio.com" class="contact-link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="contact-link">
+              <svg class="mail-icon" width="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="mailtel-item">
-            <a href="tel:+380961111111" class="contact-link"
-              >+38 096 111 11 11</a
+            <a href="tel:+380961111111" class="contact-link">
+              <svg class="tel-icon" width="10" height="16">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -73,7 +79,7 @@
           </ul>
           <!--<h2>Примеры работ</h2>-->
           <ul class="list portfolio-card">
-            <li>
+            <li class="card-item" >
               <img
                 src="./images/portfolio/example1.jpg"
                 alt="Дизайн сайта"
@@ -84,7 +90,7 @@
                 <p class="project-type">Веб-сайт</p>
               </div>
             </li>
-            <li>
+            <li class="card-item" >
               <img
                 src="./images/portfolio/example2.jpg"
                 alt=" Дизайн Постера"
@@ -97,7 +103,7 @@
                 <p class="project-type">Дизайн</p>
               </div>
             </li>
-            <li>
+            <li class="card-item" >
               <img
                 src="./images/portfolio/example3.jpg"
                 alt=" Дизайн приложения ресторан Seafood"
@@ -108,7 +114,7 @@
                 <p class="project-type">Приложение</p>
               </div>
             </li>
-            <li>
+            <li class="card-item" >
               <img
                 src="./images/portfolio/example4.jpg"
                 alt="Фото наушников"
@@ -119,7 +125,7 @@
                 <p class="project-type">Маркетинг</p>
               </div>
             </li>
-            <li>
+            <li class="card-item" >
               <img
                 src="./images/portfolio/example5.jpg"
                 alt="Дизайн проекта Boxes-коробочки"
@@ -130,7 +136,7 @@
                 <p class="project-type">Приложение</p>
               </div>
             </li>
-            <li>
+            <li class="card-item" >
               <img
                 src="./images/portfolio/example6.jpg"
                 alt="Дизайн сайта Inspiration has no Borders"
@@ -141,7 +147,7 @@
                 <p class="project-type">Веб-сайт</p>
               </div>
             </li>
-            <li>
+            <li class="card-item" >
               <img
                 src="./images/portfolio/example7.jpg"
                 alt="Дизайн издания Limited Edition"
@@ -152,7 +158,7 @@
                 <p class="project-type">Дизайн</p>
               </div>
             </li>
-            <li>
+            <li class="card-item" >
               <img
                 src="./images/portfolio/example8.jpg"
                 alt="Дизайн проекта LAB"
@@ -163,7 +169,7 @@
                 <p class="project-type">Маркетинг</p>
               </div>
             </li>
-            <li>
+            <li class="card-item" >
               <img
                 src="./images/portfolio/example9.jpg"
                 alt="Дизайн приложения Growing Business"
@@ -180,24 +186,59 @@
     </main>
     <footer class="footer">
       <div class="container footer-container">
-        <a href="./index.html" class="logo logo-footer"
-          >Web<span class="span-footer">Studio</span></a
-        >
-        <address class="address">
-          <p class="addr">г. Киев, пр-т Леси Украинки, 26</p>
-          <ul class="list">
-            <li class="foot-li">
-              <a href="mailto:info@devstudio.com" class="footer-contact"
-                >info@devstudio.com</a
-              >
+        <div class="">
+          <a href="./index.html" class="logo logo-footer"
+            >Web<span class="span-footer">Studio</span></a
+          >
+          <address class="address">
+            <p class="addr">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="list">
+              <li class="foot-li">
+                <a href="mailto:info@devstudio.com" class="footer-contact"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="foot-li">
+                <a href="tel:+380961111111" class="footer-contact"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="social-footer">
+          <h3 class="footer-social-title">Присоединяйтесь</h3>
+          <ul class="list social-list">
+            <li class="social-list-item">
+              <a href="" class="social-list-link social-list-link-foot">
+                <svg class="social-list-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-insta"></use>
+                </svg>
+              </a>
             </li>
-            <li class="foot-li">
-              <a href="tel:+380961111111" class="footer-contact"
-                >+38 096 111 11 11</a
-              >
+            <li class="social-list-item">
+              <a href="" class="social-list-link social-list-link-foot">
+                <svg class="social-list-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-twit"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link social-list-link-foot">
+                <svg class="social-list-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link social-list-link-foot">
+                <svg class="social-list-icon" width="44" height="44">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
