--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <a href="./portfolio.html" class="nav-link">Портфолио</a>
             </li>
             <li class="anchor-item">
-              <a href="" class="nav-link">Контакты</a>
+              <a href="#" class="nav-link">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -148,7 +148,7 @@
           <h2 class="title">Наша команда</h2>
           <ul class="list members">
             <li class="cards">
-              <img
+              <img class="photo-team"
                 src="./images/team/memb1.jpg"
                 alt="фото мужчины из команды разработчиков"
                 width="270"
@@ -158,28 +158,28 @@
               <div class="social">
                 <ul class="list social-list">
                   <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="44" height="44">
                         <use href="./images/sprite.svg#icon-insta"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="44" height="44">
                         <use href="./images/sprite.svg#icon-twit"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="44" height="44">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="44" height="44">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
@@ -189,7 +189,7 @@
               </div>
             </li>
             <li class="cards">
-              <img
+              <img class="photo-team"
                 src="./images/team/memb2.jpg"
                 alt="фото женщины из команды разработчиков"
                 width="270"
@@ -199,28 +199,28 @@
               <div class="social">
                 <ul class="list social-list">
                   <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="44" height="44">
                         <use href="./images/sprite.svg#icon-insta"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="44" height="44">
                         <use href="./images/sprite.svg#icon-twit"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="44" height="44">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="44" height="44">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
@@ -230,7 +230,7 @@
               </div>
             </li>
             <li class="cards">
-              <img
+              <img class="photo-team"
                 src="./images/team/memb3.jpg"
                 alt="фото мужчины из команды разработчиков"
                 width="270"
@@ -240,28 +240,28 @@
               <div class="social">
                 <ul class="list social-list">
                   <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="44" height="44">
                         <use href="./images/sprite.svg#icon-insta"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="44" height="44">
                         <use href="./images/sprite.svg#icon-twit"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="44" height="44">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="44" height="44">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
@@ -271,7 +271,7 @@
               </div>
             </li>
             <li class="cards">
-              <img
+              <img class="photo-team"
                 src="./images/team/memb4.jpg"
                 alt="фото мужчины из команды разработчиков"
                 width="270"
@@ -281,28 +281,28 @@
               <div class="social">
                 <ul class="list social-list">
                   <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="44" height="44">
                         <use href="./images/sprite.svg#icon-insta"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="44" height="44">
                         <use href="./images/sprite.svg#icon-twit"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="44" height="44">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="44" height="44">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
@@ -317,11 +317,11 @@
       <!--Постоянные клиенты-->
       <section class="section">
         <div class="container">
-          <h2 class="title">Наши клиенты</h2>
+          <h2 class="title">Постоянные клиенты</h2>
           <ul class="list clients">
             <li class="clients-icon">
-              <div class="clients-link">
-                <a href="">
+              <div>
+                <a href="#" class="clients-link">
                   <svg class="clients-svg" width="41" height="47">
                     <use href="./images/sprite.svg#icon-group1"></use>
                   </svg>
@@ -329,8 +329,8 @@
               </div>
             </li>
             <li class="clients-icon">
-              <div class="clients-link">
-                <a href="">
+              <div>
+                <a href="#" class="clients-link">
                   <svg class="clients-svg" width="40" height="52">
                     <use href="./images/sprite.svg#icon-group2"></use>
                   </svg>
@@ -338,8 +338,8 @@
               </div>
             </li>
             <li class="clients-icon">
-              <div class="clients-link">
-                <a href="">
+              <div>
+                <a href="#" class="clients-link">
                   <svg class="clients-svg" width="43" height="41">
                     <use href="./images/sprite.svg#icon-group3"></use>
                   </svg>
@@ -347,8 +347,8 @@
               </div>
             </li>
             <li class="clients-icon">
-              <div class="clients-link">
-                <a href="">
+              <div>
+                <a href="#" class="clients-link">
                   <svg class="clients-svg" width="84" height="41">
                     <use href="./images/sprite.svg#icon-group4"></use>
                   </svg>
@@ -356,8 +356,8 @@
               </div>
             </li>
             <li class="clients-icon">
-              <div class="clients-link">
-                <a href="">
+              <div>
+                <a href="#" class="clients-link">
                   <svg class="clients-svg" width="63" height="45">
                     <use href="./images/sprite.svg#icon-group5"></use>
                   </svg>
@@ -365,8 +365,8 @@
               </div>
             </li>
             <li class="clients-icon">
-              <div class="clients-link">
-                <a href="">
+              <div>
+                <a href="#" class="clients-link">
                   <svg class="clients-svg" width="94" height="44">
                     <use href="./images/sprite.svg#icon-group6"></use>
                   </svg>
@@ -403,28 +403,28 @@
           <h3 class="footer-social-title">Присоединяйтесь</h3>
           <ul class="list social-list">
             <li class="social-list-item">
-              <a href="" class="social-list-link social-list-link-foot">
+              <a href="#" class="social-list-link social-list-link-foot">
                 <svg class="social-list-icon" width="44" height="44">
                   <use href="./images/sprite.svg#icon-insta"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="" class="social-list-link social-list-link-foot">
+              <a href="#" class="social-list-link social-list-link-foot">
                 <svg class="social-list-icon" width="44" height="44">
                   <use href="./images/sprite.svg#icon-twit"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="" class="social-list-link social-list-link-foot">
+              <a href="#" class="social-list-link social-list-link-foot">
                 <svg class="social-list-icon" width="44" height="44">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="" class="social-list-link social-list-link-foot">
+              <a href="#" class="social-list-link social-list-link-foot">
                 <svg class="social-list-icon" width="44" height="44">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
